--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -12,6 +12,10 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+env:
+  HUGO_VERSION: 0.145.0
+  HTMLTEST_VERSION: 0.17.0
+
 jobs:
   # # https://github.com/pre-commit/action
   # pre-commit:
@@ -26,8 +30,6 @@ jobs:
 
   build:
     runs-on: ubuntu-24.04
-    env:
-      HUGO_VERSION: 0.145.0
     steps:
       - name: Install Hugo CLI
         run: |
@@ -67,6 +69,29 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
+
+  linkcheck:
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Install Hugo CLI
+        run: |
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
+          && sudo dpkg -i ${{ runner.temp }}/hugo.deb
+
+      - name: Install linkchecker
+        run: |
+          curl -sfL "https://github.com/wjdp/htmltest/releases/download/v${HTMLTEST_VERSION}/htmltest_${HTMLTEST_VERSION}_linux_amd64.tar.gz" | tar -zxf - htmltest
+
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Build with Hugo
+        run: hugo
+
+      - name: Run linkchecker
+        run: ./htmltest
 
   deploy:
     if: github.ref == 'refs/heads/main'
